--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
@@ -3,6 +3,7 @@
 .bContainer{
     width: 950px;
     height: auto;
+    align-self: center;
     margin-left: 20px;
     margin-bottom: 20px;
     padding: 0 10px 30px 10px;
@@ -16,7 +17,7 @@
     width: 950px;
     height: auto;
     margin-left: 20px;
-    
+    align-self: center;
     padding: 0 10px 30px 10px;
     background: linear-gradient(to bottom, #fff 15%, rgb(210, 220, 255, 0.766) 50%);
     background-position: center 20%;
